--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@ font-family: 'Open Sans', sans-serif;
 */
 
 $color-primary: #F03000;
+$color-secondary: #F0F0F0;
 $default-font:  "Montserrat",sans-serif;
 $secondary-font: "Open Sans", sans-serif;
 $body-text:     16px;
@@ -11,43 +12,48 @@ $body-text:     16px;
 .body {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
-    padding: 20px;
+    gap: 20px; 
 }
 
 .title {
     margin: auto;
+
+    .title__img {
+        margin-top: 36px;
+        margin-bottom: 10px;
+    }
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
- 
-}
+    justify-content: space-between;
+    margin-right: 20px;
+    margin-left: 20px;
 
+    .menu__item {
+        list-style: none;
+        color: $color-primary;
+        font-size: 18px;
+        padding: 20px;
+        font-family: $default-font;
+    }
 
-.menu__item {
-    list-style: none;
-    color: $color-primary;
-    font-size: 18px;
-    padding: 20px;
-    font-family: $default-font;
-   
-}
-
-
-.menu__item--selected {
-    list-style: none;
-    background-color: $color-primary;
-    font-size: 18px;
-    color: white;
-    padding: 20px;
-    font-family: $default-font;
+    .menu__item--selected {
+        list-style: none;
+        background-color: $color-primary;
+        font-size: 18px;
+        color: white;
+        padding: 20px;
+        font-family: $default-font;
+    }
 }
 
 .foto {
     color: white;
     position: relative;
+    margin: 10px 20px;
+
+
     
     .foto__price {
         background-color: $color-primary;
@@ -58,20 +64,33 @@ $body-text:     16px;
         font-family: $default-font;
         font-size: 18px;
     }
+
     .foto__text{
         position: absolute;
-        bottom: 25px;
+        bottom: 30px;
         left: 20px;
         font-family: $secondary-font;
+        padding-right: 20px;
     }
 
     .foto__title--big{
         position: absolute;
-        bottom:60px;
+        bottom:70px;
         left: 20px;
         font-size: 28px;
         font-family: $default-font;
         font-weight: 600;
+        padding-right: 20px;
+    }
+
+    .foto__title--big2{
+        position: absolute;
+        top:90px;
+        left: 20px;
+        font-size: 28px;
+        font-family: $default-font;
+        font-weight: 600;
+        padding-right: 20px;
     }
 
     .foto__title--small{
@@ -87,3 +106,61 @@ $body-text:     16px;
         width: 100%;
     }
 }
+
+.block {
+    display:flex;
+    background-color: $color-secondary;
+    margin: 10px 20px ;
+
+    .block__icon {
+        padding-top: 20px;
+        flex-basis:100px;
+        flex-shrink: 0;
+        text-align: center;
+    }
+
+    .block__text {
+        font-family: $secondary-font;
+        padding-right: 30px ;
+    }
+    
+    .block__title {
+        color: $color-primary;
+        font-size: 18px;
+        font-family: $default-font;
+    }
+
+}
+
+.news {
+    background-color: $color-secondary;
+    margin: 20px;
+    font-family: $default-font;
+    padding: 4px 20px;
+
+    .news__date {
+        color: #888888; 
+    }
+    .news__title {
+        color: $color-primary;        
+    }
+}
+.footer {
+    color: white;
+    background-color: #444444;
+    padding: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+    font-family: $default-font;
+} 
+
+
+h2 {
+    font-size: 24px;
+    font-family: $default-font;
+    font-weight: 600;
+    padding: 0 20px;
+}
+
+ 
