--- a/style.css
+++ b/style.css
@@ -22,20 +22,17 @@ font-family: 'Open Sans', sans-serif;
   margin-right: 20px;
   margin-left: 20px;
 }
-.menu .menu__item {
+.menu__item {
   list-style: none;
   color: #F03000;
   font-size: 18px;
   padding: 20px;
   font-family: "Montserrat", sans-serif;
+  text-decoration: none;
 }
-.menu .menu__item--selected {
-  list-style: none;
+.menu__item:hover, .menu__item:focus {
   background-color: #F03000;
-  font-size: 18px;
   color: white;
-  padding: 20px;
-  font-family: "Montserrat", sans-serif;
 }
 
 .foto {
@@ -43,7 +40,7 @@ font-family: 'Open Sans', sans-serif;
   position: relative;
   margin: 10px 20px;
 }
-.foto .foto__price {
+.foto__price {
   background-color: #F03000;
   padding: 10px;
   position: absolute;
@@ -52,14 +49,14 @@ font-family: 'Open Sans', sans-serif;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
 }
-.foto .foto__text {
+.foto__text {
   position: absolute;
   bottom: 30px;
   left: 20px;
   font-family: "Open Sans", sans-serif;
   padding-right: 20px;
 }
-.foto .foto__title--big {
+.foto__title--big {
   position: absolute;
   bottom: 70px;
   left: 20px;
@@ -68,7 +65,7 @@ font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   padding-right: 20px;
 }
-.foto .foto__title--big2 {
+.foto__title--big2 {
   position: absolute;
   top: 90px;
   left: 20px;
@@ -77,7 +74,7 @@ font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   padding-right: 20px;
 }
-.foto .foto__title--small {
+.foto__title--small {
   position: absolute;
   bottom: 25px;
   left: 20px;
@@ -85,7 +82,7 @@ font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight: 600;
 }
-.foto .foto__img {
+.foto__img {
   width: 100%;
 }
 
@@ -94,17 +91,17 @@ font-family: 'Open Sans', sans-serif;
   background-color: #F0F0F0;
   margin: 10px 20px;
 }
-.block .block__icon {
+.block__icon {
   padding-top: 20px;
   flex-basis: 100px;
   flex-shrink: 0;
   text-align: center;
 }
-.block .block__text {
+.block__text {
   font-family: "Open Sans", sans-serif;
   padding-right: 30px;
 }
-.block .block__title {
+.block__title {
   color: #F03000;
   font-size: 18px;
   font-family: "Montserrat", sans-serif;
@@ -116,10 +113,10 @@ font-family: 'Open Sans', sans-serif;
   font-family: "Montserrat", sans-serif;
   padding: 4px 20px;
 }
-.news .news__date {
+.news__date {
   color: #888888;
 }
-.news .news__title {
+.news__title {
   color: #F03000;
 }
 
