--- a/style.css
+++ b/style.css
@@ -6,21 +6,41 @@ font-family: 'Open Sans', sans-serif;
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
+  padding: 20px;
+  margin: 0;
+}
+@media screen and (min-width: 768px) {
+  .body {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    grid-column: 1/-1;
+    justify-content: space-between;
+    align-content: center;
+  }
 }
 
 .title {
-  margin: auto;
+  text-align: center;
 }
 .title .title__img {
-  margin-top: 36px;
-  margin-bottom: 10px;
+  margin: 16px;
 }
 
 .menu {
   display: flex;
   justify-content: space-between;
-  margin-right: 20px;
-  margin-left: 20px;
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    justify-content: end;
+  }
 }
 .menu__item {
   list-style: none;
@@ -38,7 +58,7 @@ font-family: 'Open Sans', sans-serif;
 .foto {
   color: white;
   position: relative;
-  margin: 10px 20px;
+  margin: 0;
 }
 .foto__price {
   background-color: #F03000;
@@ -67,12 +87,17 @@ font-family: 'Open Sans', sans-serif;
 }
 .foto__title--big2 {
   position: absolute;
-  top: 90px;
+  bottom: 90px;
   left: 20px;
   font-size: 28px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   padding-right: 20px;
+}
+@media screen and (min-width: 768px) {
+  .foto__title--big2 {
+    top: 300px;
+  }
 }
 .foto__title--small {
   position: absolute;
@@ -82,24 +107,46 @@ font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight: 600;
 }
-.foto__img {
+.foto__img--big {
   width: 100%;
+  min-height: 240px;
+}
+.foto__img--small {
+  width: 100%;
+  min-height: 150px;
+}
+@media screen and (min-width: 768px) {
+  .foto__img--small {
+    height: 180px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .foto--big {
+    grid-column: 1/-1;
+  }
 }
 
 .block {
   display: flex;
   background-color: #F0F0F0;
-  margin: 10px 20px;
+  margin: 0;
+  padding: 4px 20px;
+}
+@media screen and (min-width: 768px) {
+  .block {
+    display: block;
+    text-align: center;
+  }
 }
 .block__icon {
-  padding-top: 20px;
+  padding-top: 16px;
   flex-basis: 100px;
   flex-shrink: 0;
   text-align: center;
 }
 .block__text {
   font-family: "Open Sans", sans-serif;
-  padding-right: 30px;
 }
 .block__title {
   color: #F03000;
@@ -109,9 +156,14 @@ font-family: 'Open Sans', sans-serif;
 
 .news {
   background-color: #F0F0F0;
-  margin: 20px;
+  margin: 0px;
   font-family: "Montserrat", sans-serif;
   padding: 4px 20px;
+}
+@media screen and (min-width: 768px) {
+  .news {
+    grid-column: 1/-1;
+  }
 }
 .news__date {
   color: #888888;
@@ -124,15 +176,23 @@ font-family: 'Open Sans', sans-serif;
   color: white;
   background-color: #444444;
   padding: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    grid-column: 1/-1;
+  }
 }
 
 h2 {
   font-size: 24px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  padding: 0 20px;
+  padding: 0;
+}
+@media screen and (min-width: 768px) {
+  h2 {
+    grid-column: 1/-1;
+  }
 }/*# sourceMappingURL=style.css.map */
